@@ -1,3 +1,8 @@
+2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-art.el (gnus-article-setup-buffer): Make sure that the article
+	buffer always points to the right summary buffer.
+
 2012-12-25  John Wiegley  <jwiegley@gmail.com>
 
 	* auth-source.el (auth-source-netrc-parse): Allow using "password" as
